# iyree-python-sdk

./: .gitignore  README.md  pyproject.toml
docs/: cube.mdx  dwh.mdx  index.mdx  kv.mdx
docs/ai/09-04-2026/: cursor_python_sdk_implementation_plan_f.md  iyree_python_sdk_f99d03b9.plan.md
iyree/cube/_querybuilder/: __init__.py  filters.py  query.py
src/iyree/: __init__.py  _async_client.py  _client.py  _config.py  _types.py  exceptions.py
src/iyree/_http/: __init__.py  _async.py  _common.py  _sync.py
src/iyree/cube/: __init__.py  _async.py  _common.py  _sync.py
src/iyree/cube/_querybuilder/: __init__.py  enums.py  filters.py  objects.py  query.py
src/iyree/dwh/: __init__.py  _async.py  _common.py  _sync.py
src/iyree/kv/: __init__.py  _async.py  _common.py  _sync.py
src/iyree/s3/: __init__.py  _async.py  _common.py  _sync.py
tests/: _helpers.py  conftest.py  test_config.py  test_cube_async.py  test_cube_common.py  test_cube_sync.py  test_dwh_async.py  test_dwh_common.py  test_dwh_sync.py  test_http.py  test_integration_async.py  test_integration_sync.py  test_kv_async.py  test_kv_sync.py  test_module_api.py  test_query_builder.py  test_s3_async.py  test_s3_sync.py
